# AIGameDevBench

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-command-harness-driver.md
scripts/: import_gamedevbench.py
src/aigamedevbench/: cli.py  driver.py  git_ops.py  result.py  runner.py  testcase.py  tscn_model.py  validation.py  workspace.py
testcases/: README.md
testcases/bench-0001-attack-buff/: expected.json  fix.diff  testcase.toml
testcases/gdb-task_0002/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0007/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0012/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0013/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0025/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0027/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0051/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0052/: fix.diff  testcase.toml  verifier.gd
testcases/gdb-task_0103/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
testcases/gdb-task_0281/: fix.diff  testcase.toml  verifier.gd  verifier_scene.tscn
tests/: test_arch_verifier.py  test_cli.py  test_config_verifier.py  test_driver.py  test_godot_runtime.py  test_result.py  test_runner.py  test_testcase.py  test_tscn_diff_verifier.py  test_tscn_model.py  test_validation.py  test_verifier_registry.py  test_workspace.py
(+139 files in other folders)
